<resources>
    <string name="app_name">Job Seeking Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_education">Education</string>
    <string name="hint_work_experience">Work Experience</string>
    <string name="experience_details">Experience Details</string>
    <string name="hint_language">Language</string>
    <string name="hint_skills">Skills</string>
    <string name="upload_cv">Upload CV</string>
    <string name="signup">Signup</string>
    <string name="btn_link_to_login">Already registered.. login now</string>
    <string name="btn_link_to_signup_jobs">Signup as Jobs</string>
    <string name="hint_summary">Summary</string>
    <string name="btn_link_to_register">Not registered yet.. go to Signup</string>
    <string name="login">Login</string>
    <string name="advertiser">Job Advertiser</string>
    <string name="jobseeker">JobSeeker</string>
    <string name="search_job">Search for job vacancy</string>
    <string name="job_position_title">Job position title</string>
    <string name="work_type">Work type</string>
    <string name="apply">Apply</string>
    <string name="required_skills">Required skills</string>
    <string name="required_experience">Required experience</string>
    <string name="work_time">Work time</string>
    <string name="salary_range">Salary range</string>
    <string name="hint_account_type">Account type</string>
    <string name="show_cv">Show CV</string>
    <string name="update_profile">Update Profile</string>
    <string name="delete">Delete</string>
    <string name="hint_jobs_name">Jobs name</string>
    <string name="hint_jobs_address">Jobs Address</string>
    <string name="hint_jobs_details">Jobs Details</string>
    <string name="btn_link_to_signup_jobseker">Signup as JobSeeker</string>
    <string name="jobseeker_name">JobSeeker name</string>
    <string name="date">Date</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="status">Status</string>
    <string name="missing_fields_message">Pleaese fill all fields</string>
    <string name="job_vacancies">Job Vacancies</string>
    <string name="my_applied_jobs">My Applied Jobs</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="job_vacancy_details">Job Vacancy Details</string>
    <string name="jobs">Jobs</string>
    <string name="btn_link_to_reset">Forget your password. Reset</string>
    <string name="hint_enter_code">Enter the code sent to your email</string>
    <string name="verify">Verify</string>
    <string name="hint_confirm_password">Confirm passowrd</string>
    <string name="data_loaded">Data loaded successfully</string>
    <string name="please_choose_cv">Please choose cv file</string>
    <string name="error_load">error loading data</string>
    <string name="job_details">Job Details</string>
    <string name="confirmation_dialog">Are you sure you want to apply for this job</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="updated_success">Information updated successfully</string>
    <string name="posted_jobs">Posted jobs</string>
    <string name="job_requests">Job Requests</string>
    <string name="add_job">Add new job vacancy</string>
    <string name="hint_job_position_title">Job position title</string>
    <string name="deletion_dialog">Are you sure you want to delete this item ?</string>
    <string name="job_delete">Job vacancy deleted successfully</string>
    <string name="error_delete">Some error happened please try again later</string>
    <string name="add_job_success">Job vacancy added successfully</string>
    <string name="please_choose_skill">Please choose skill</string>
    <string name="apply_job">You have successfully appliedd for this job</string>
    <string name="code_correct">Your code is correct</string>
    <string name="code_not_correct">Code is not correct</string>
    <string name="passsword_reset_success">Password reset successfully</string>
    <string name="hint_your_email">Your email</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="reset">Reset password</string>
    <string name="request_accepted">Request accepted successfully</string>
    <string name="request_rejected">Request rejected successfully</string>
    <string name="accept_dialog">Are you sure you want to accept this request ?</string>
    <string name="reject_dialog">Are you sure you want to reject this request ?</string>
    <string name="view_all">View all</string>
    <string name="recommended">Recommended</string>
    <string name="code_sent">A code has been sent to your email successfully</string>
    <string name="send_code">Send code</string>
    <string name="bookmarked">Boomarked</string>
    <string name="screenshot">Screenshot</string>
    <string name="jobseeker_details">JobSeeker Details</string>
    <string name="update_job">Update Job Vacancy</string>
    <string name="update_job_success">Job vacancy updated successfully</string>
    <string name="update">Update</string>
    <string name="please_wait">Please wiat your account to be activated by admin</string>
</resources>