<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
         android:paddingTop="30dp"
        tools:context=".jobs.JobsSignUpActivity"
        >

        <Button
            android:id="@+id/btnLinkToSignUpJobSeeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_link_to_signup_jobseker"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/jobs_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_jobs_name"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/jobs_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_jobs_address"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/jobs_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_jobs_details"
            android:padding="10dp"
            android:lines="2"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn"
            android:text="@string/signup"
            android:textColor="@color/white"
            />

        <!-- Link to Login Screen -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>



    </LinearLayout>


