<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    >

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_your_email"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_enter_code"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_new_password"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_pass"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_btn"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>