<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/accept_dialog"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/yes"
        android:textColor="@color/status_accepted"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline"
        android:layout_toStartOf="@+id/yes_btn"
        android:paddingBottom="16dp"
        android:text="@string/cancel"
        android:textColor="@color/status_rejected"
        android:textSize="18sp" />



</RelativeLayout>