<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".company.CompanySignUpActivity"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/btnLinkToSignupCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_link_to_signup_company"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:inputType="textPassword"/>

          <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_phone"
            android:padding="10dp"
              android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_education"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/black"
            android:alpha="0.6"
            android:layout_marginBottom="10dp"
            android:padding="0dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/experience_details"
            android:layout_marginBottom="10dp"

            />
        <EditText
            android:id="@+id/work_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_work_experience"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_language"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

<!--        <EditText-->
<!--            android:id="@+id/skills"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:background="@drawable/bg_edit_text"-->
<!--            android:hint="@string/hint_skills"-->
<!--            android:padding="10dp"-->
<!--            android:singleLine="true"-->
<!--            android:textColor="@color/input_login"-->
<!--            android:textColorHint="@color/input_login_hint" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
           >

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/skills_chooser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit_text"
                android:tooltipText="Skills" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_down"
                android:layout_alignParentEnd="true"
                app:tint="@color/black"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/hint_summary"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <Button
            android:id="@+id/uploadCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:text="@string/upload_cv"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn"
            android:text="@string/signup"
            android:textColor="@color/white"
             />

        <!-- Link to Login Screen -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>



    </LinearLayout>


</androidx.core.widget.NestedScrollView>